# Rassam-persian-memaid-clone

./: .gitignore  LICENSE  README.md  generate-latest-json.js  next.config.ts  package-lock.json  package.json  start.sh
release/: latest.json
scripts/: copy-release.js  postbuild.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: update-checker.tsx
src/components/editor/: mermaid-editor.tsx
src/lib/: tauri-download.ts
~/.tauri/: myapp.key  myapp.key.pub
